--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -41,7 +41,7 @@ body {
 }
 
 .lyriikanpala p{
-	line-height:80%;
+	line-height:120%;
 	font-size:18px;
 	font-weight:300;
 	color:white;
@@ -129,7 +129,6 @@ header {
 
 #sendLyrics{
 	display:inline-block;
-	float:left;
 	padding-top:20%;
 	width:100%;
 	height:100%;
@@ -197,8 +196,7 @@ h1{
 	width:50%;
 	padding:1%;
 	margin-left:2%;
-	font-weight:bold;
-	opacity:70%;
+	opacity:0.7;
 	margin-bottom:0;
 	font-size:20px;
 	font-weight:900;
@@ -209,7 +207,6 @@ h1{
 	width:100%;
 	height:5%;
 	padding: 5% 0 5% 0;
-	background-color:white;
 	text-align:center;
 	font-weight:700;
 	color:white;
